After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 655256 - It is possible to create a new tab on the desktop window
It is possible to create a new tab on the desktop window
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Desktop
3.2.x
Other Linux
: Normal normal
: 3.2
Assigned To: Nautilus Maintainers
Nautilus Maintainers
: 663657 672857 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2011-07-25 12:47 UTC by Pedro Villavicencio
Modified: 2012-03-26 16:42 UTC
See Also:
GNOME target: ---
GNOME version: 3.1/3.2


Attachments
Don't allow "New tab" (Ctrl+T) shortcut in desktop window (781 bytes, patch)
2011-10-15 06:51 UTC, Dmitry Shachnev
committed Details | Review

Description Pedro Villavicencio 2011-07-25 12:47:58 UTC
this report has been filed here:

https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/814799

"Steps to reproduce: From the Nautilus desktop, press Ctrl+T to create a new tab. The desktop window will turn into a popup with a Nautilus file view and none of the usual chrome, and two tabs at the top. The application seems to suffer horribly at this point."
Comment 1 Cosimo Cecchi 2011-09-23 17:06:30 UTC
We should try to fix this for 3.2.1.
Comment 2 Dmitry Shachnev 2011-10-15 06:51:42 UTC
Created attachment 199052 [details] [review]
Don't allow "New tab" (Ctrl+T) shortcut in desktop window
Comment 3 Dmitry Shachnev 2011-10-23 10:12:02 UTC
Can anybody look at that patch?
Comment 4 Cosimo Cecchi 2011-12-01 21:07:27 UTC
Attachment 199052 [details] pushed as 7e351fd - Don't allow "New tab" (Ctrl+T) shortcut in desktop window

Thanks, looks good. I pushed the patch to git master.
Comment 5 Cosimo Cecchi 2012-02-06 19:01:43 UTC
*** Bug 663657 has been marked as a duplicate of this bug. ***
Comment 6 Cosimo Cecchi 2012-03-26 16:42:22 UTC
*** Bug 672857 has been marked as a duplicate of this bug. ***