Don't allow "New tab" (Ctrl+T) shortcut in desktop window

Disable the New Tab action on the desktop.

https://bugzilla.gnome.org/show_bug.cgi?id=655256